--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -14,4 +14,5 @@
     .form-group
       = f.label :password_confirmation
       = f.password_field :password_confirmation, class: 'form-control'
-     = f.submit 'Sign up', :class => 'button right'
+      = f.hidden_field :organisation_id, value: current_organisation.id
+    = f.submit 'Sign up', :class => 'button right'
