--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -2,5 +2,5 @@
 - flash.each do |name, msg|
   - if msg.is_a?(String)
     .alert{class: "alert-#{name.to_s == 'notice' ? 'success' : 'danger'}"}
-      %button{type: "button", class: "close", "data-dismiss": "alert", "aria-hidden": "true"}&times;
+      %button{type: "button", class: "close", "data-dismiss": "alert", "aria-hidden": "true"}
       = content_tag :div, msg, :id => "flash_#{name}"
