--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -2,6 +2,8 @@
 - if user_signed_in?
   %li= link_to 'Edit account', edit_user_registration_path
   %li= link_to 'Sign out', destroy_user_session_path, :method=>'delete'
+  - if current_user.admin?
+    %li= link_to 'Manage Org', organisation_path(current_user.organisation)
 - else
   %li= link_to 'Sign in', new_user_session_path
   %li= link_to 'Sign up', new_user_registration_path
