--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -1,2 +1,2 @@
 %h3 Welcome
-= link_to('Users:', users_path) "#{User.count} registered"
+= link_to('Users:', users_path) + "#{User.count} registered"
