--- a/app/views/election_allowed_emails/new.html.haml
+++ b/app/views/election_allowed_emails/new.html.haml
@@ -2,4 +2,4 @@
 
 = render 'form'
 
-= link_to 'Back', election_election_allowed_emails_path(@election)
+= link_to 'Back', organisation_election_election_allowed_emails_path(current_organisation, @election)
