--- a/app/views/election_allowed_emails/edit.html.haml
+++ b/app/views/election_allowed_emails/edit.html.haml
@@ -4,4 +4,4 @@
 
 = link_to 'Show', @election_allowed_email
 \|
-= link_to 'Back', election_election_allowed_emails_path(@election)
+= link_to 'Back', organisation_election_election_allowed_emails_path(current_organisation, @election)
