--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -1,6 +1,6 @@
 -# add navigation links to this file
 - if user_signed_in?
-  %li= link_to 'Elections', elections_path
+  %li= link_to 'Elections', organisation_elections_path(current_organisation)
   %li= link_to 'Edit account', edit_user_registration_path
   - if current_user.admin?
     %li= link_to 'Users', users_path
