--- a/app/views/organisations/show.html.haml
+++ b/app/views/organisations/show.html.haml
@@ -7,3 +7,5 @@
 = link_to 'Edit', edit_organisation_path(@organisation)
 \|
 = link_to 'Back', organisations_path
+\|
+= link_to 'Users', users_organisation_path(@organisation)
