--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -3,11 +3,9 @@
   %li= link_to 'Elections', organisation_elections_path(current_organisation)
   %li= link_to 'Edit account', edit_user_registration_path
   - if current_user.admin?
-    %li= link_to 'Users', users_path
-    %li= link_to 'Manage Org', organisation_path(current_user.organisation)
+    %li= link_to 'Manage Org', organisation_path(current_organisation)
   %li= link_to 'Sign out', destroy_user_session_path, :method=>'delete'
 
 - else
   %li= link_to 'Sign in', new_user_session_path
   %li= link_to 'Sign up', new_user_registration_path
-
