--- a/app/views/elections/index.html.haml
+++ b/app/views/elections/index.html.haml
@@ -14,7 +14,7 @@
     - @elections.each do |election|
       %tr
         %td= election.title
-        %td= election.created_at
+        %td= election.created_at.to_date.to_formatted_s :long_ordinal
         %td= election.created_by
         %td= link_to 'Show', [current_organisation, election]
         - if current_organisation.is_admin?(current_user)
@@ -22,5 +22,5 @@
           %td= link_to 'Destroy', [current_organisation, election], :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
-- if current_organisation.is_admin?(current_user)
+- if current_organisation.is_admin?(current_user) && current_user.confirmed?
   = link_to 'New Election', new_organisation_election_path(current_organisation)
