--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -35,7 +35,6 @@ img {
 // to make views framework-neutral
 main {
   @extend .container;
-  background-color: #eee;
   padding-bottom: 80px;
   width: 100%;
   margin-top: 51px; // accommodate the navbar
@@ -44,6 +43,13 @@ section {
   @extend .row;
   margin-top: 20px;
   }
+
+.small {
+  @extend .container;
+  color: #aaa;
+  padding-left: 0px;
+  padding-right: 0px;
+}
 
 // Styles for form views
 // using Bootstrap
