--- a/app/views/organisations/_form.html.haml
+++ b/app/views/organisations/_form.html.haml
@@ -6,8 +6,8 @@
         - @organisation.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
+  .field.form-group
     = f.label :name
-    = f.text_field :name
-  .actions
-    = f.submit 'Save'
+    = f.text_field :name, class: "form-control"
+  .actions.form-group
+    = f.submit 'Save', class: "btn btn-default"
