--- a/app/views/candidates/_form.html.haml
+++ b/app/views/candidates/_form.html.haml
@@ -1,17 +1,17 @@
 = form_for [current_organisation, @election, @candidate] do |f|
-  - if @candidate.errors.any?
+  - if @election.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@candidate.errors.count, "error")} prohibited this candidate from being saved:"
+      %h2= "#{pluralize(@election.errors.count, "error")} prohibited this election from being saved:"
       %ul
-        - @candidate.errors.full_messages.each do |msg|
+        - @election.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
+  .field.form-group
     = f.label :name
-    = f.text_field :name
-  .field
+    = f.text_field :name, class: "form-control"
+  .field.form-group
     = f.label :description
-    = f.text_area :description
-    = f.hidden_field :organisation_id, value: current_organisation.id
+    = f.text_area :description, class: "form-control"
+    = f.hidden_field :created_by, value: current_user.id
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save', class: "btn btn-default"
