--- a/app/views/election_allowed_emails/_form.html.haml
+++ b/app/views/election_allowed_emails/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [current_organisation, @election, @election_allowed_email] do |f|
+= form_for [current_organisation, @election, @election_allowed_email], { html: { class: "form-inline" } } do |f|
   - if @election_allowed_email.errors.any?
     #error_explanation
       %h2= "#{pluralize(@election_allowed_email.errors.count, "error")} prohibited this election_allowed_email from being saved:"
@@ -6,11 +6,11 @@
         - @election_allowed_email.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :email
-    = f.text_field :email
+  .form-group
+    = f.text_field :email, class: 'form-control', placeholder: "Email"
     = f.hidden_field :election_id, value: @election.id
-  .field
+  .form-group
     = f.hidden_field :organisation_id, value: current_organisation.id
-  .actions
-    = f.submit 'Save'
+
+  = f.submit 'Create', class: 'form-control pull-right'
+
