--- a/app/views/elections/edit.html.haml
+++ b/app/views/elections/edit.html.haml
@@ -1,9 +1,16 @@
-%h1 Editing election
+.container
+  .row.election_overview
+    .col-md-8.col-md-offset-2.text-left
+      .row
+        .col-md-8
+          %h1 Edit election
+          
+        .col-md-4
+          %button.pull-right.btn.btn-default.show_election_button{:type => "button"}= link_to 'View election', organisation_election_path(current_organisation, @election)
+      %p.lead= @election.title
+  %hr
 
-= render 'form'
-
-= link_to 'Show', [current_organisation, @election]
-\|
-= link_to 'Back', organisation_elections_path(current_organisation)
-\|
-= link_to 'Allowed emails', organisation_election_election_allowed_emails_path(current_organisation, @election)
+.container
+  .row.election_overview
+    .col-md-8.col-md-offset-2.text-left
+      = render 'form'
