--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,6 +1,9 @@
 -# Rails flash messages styled for Bootstrap 3.0
 - flash.each do |name, msg|
   - if msg.is_a?(String)
-    .alert{class: "alert-#{name.to_s == 'notice' ? 'success' : 'danger'}"}
-      %button{type: "button", class: "close", "data-dismiss": "alert", "aria-hidden": "true"}
-      = content_tag :div, msg, :id => "flash_#{name}"
+    .fixed
+      .flash_messages
+        = message_block :on => [:all], :after_message => '<a href="#" class="close">&times;</a>'
+    -# .alert{class: "alert-#{name.to_s == 'notice' ? 'success' : 'danger'}"}
+    -#   %button{type: "button", class: "close", "data-dismiss": "alert", "aria-hidden": "true"}
+    -#   = content_tag :div, msg, :id => "flash_#{name}"
