--- a/app/views/elections/_form.html.haml
+++ b/app/views/elections/_form.html.haml
@@ -16,9 +16,11 @@
   .field.form-group
     = f.label :end_date
     = f.date_select(:end_date, :order => [:day, :month, :year])
+
   .actions
     = f.submit 'Save', class: "btn btn-default"
 
-    %button.btn.btn-default{:type => "button"}= link_to 'Edit allowed users', organisation_election_election_allowed_emails_path(current_organisation, @election)
+    - if @election.id.present?
+      %button.btn.btn-default{:type => "button"}= link_to 'Edit allowed users', organisation_election_election_allowed_emails_path(current_organisation, @election)
 
-    %button.btn.btn-default{:type => "button"}= link_to 'Edit candidates', organisation_election_candidates_path(current_organisation, @election)
+      %button.btn.btn-default{:type => "button"}= link_to 'Edit candidates', organisation_election_candidates_path(current_organisation, @election)
