--- a/app/views/candidates/_candidate.html.haml
+++ b/app/views/candidates/_candidate.html.haml
@@ -7,10 +7,16 @@
     .row
       .col-md-12.text-left
         %p.candidate_description= truncate(candidate.description, length: 150)
-    - if current_organisation.is_admin?(current_user)
+    - if current_organisation.is_admin?(current_user) && @election
       .row
         .col-md-12.text-left
           .btn-group.btn-group-xs{:role =>"group"}
             %button.btn.btn-default{:type => "button"}= link_to 'Edit', edit_organisation_election_candidate_path(current_organisation, @election, candidate)
             %button.btn.btn-default{:type => "button"}= link_to 'Delete', [current_organisation, @election, candidate], :method => :delete, :data => { :confirm => 'Are you sure?' }
+    -# - elsif current_organisation.is_admin?(current_user)
+    -#   .row
+    -#     .col-md-12.text-left
+    -#       .btn-group.btn-group-xs{:role =>"group"}
+    -#         %button.btn.btn-default{:type => "button"}= link_to 'Edit', edit_organisation_election_candidate_path(current_organisation, @election, candidate)
+    -#         %button.btn.btn-default{:type => "button"}= link_to 'Delete', [current_organisation, @election, candidate], :method => :delete, :data => { :confirm => 'Are you sure?' }
 %hr
