--- a/app/views/candidates/new.html.haml
+++ b/app/views/candidates/new.html.haml
@@ -1,5 +1,10 @@
-%h1 New candidate
+.container
+  .row.election_overview
+    .col-md-8.col-md-offset-2.text-left
+      .row
+        .col-md-8
+          %h1 New candidate
 
-= render 'form'
+      = render 'form'
 
-= link_to 'Back', organisation_election_candidates_path(current_organisation, @election, @election.candidates)
+      = link_to 'Back', organisation_election_candidates_path(current_organisation, @election)
