--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -11,7 +11,7 @@
       - if devise_mapping.confirmable? && resource.pending_reconfirmation?
         %div Currently waiting confirmation for: = resource.unconfirmed_email
     %fieldset
-      <p>Leave these fields blank if you don't want to change your password.</p>
+      %p Leave these fields blank if you don't want to change your password.
       .form-group
         = f.label :password
         = f.password_field :password, :autocomplete => 'off', class: 'form-control'
@@ -19,12 +19,12 @@
         = f.label :password_confirmation
         = f.password_field :password_confirmation, class: 'form-control'
     %fieldset
-      <p>You must enter your current password to make changes.</p>
+      %p You must enter your current password to make changes.
       .form-group
         = f.label :current_password
         = f.password_field :current_password, class: 'form-control'
     = f.submit 'Update', :class => 'button right'
 .authform
-%h3 Cancel Account
-%p Unhappy? We'll be sad to see you go.
-= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right'
+  %h3 Cancel Account
+  %p Unhappy? We'll be sad to see you go.
+  = button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right'
