--- a/app/views/elections/new.html.haml
+++ b/app/views/elections/new.html.haml
@@ -1,5 +1,10 @@
-%h1 New election
+.container
+  .row.election_overview
+    .col-md-8.col-md-offset-2.text-left
+      .row
+        .col-md-8
+          %h1 New election
 
-= render 'form'
+      = render 'form'
 
-= link_to 'Back', organisation_elections_path(current_organisation)
+      = link_to 'Back', organisation_elections_path(current_organisation)
