Can add existing candidates to an election

--- a/app/views/candidates/_form.html.haml
+++ b/app/views/candidates/_form.html.haml
@@ -15,3 +15,4 @@
     = f.hidden_field :created_by, value: current_user.id
   .actions
     = f.submit 'Save', class: "btn btn-default"
+    %button.btn.btn-default{:type => "button"}= link_to 'Delete', [current_organisation, @election, candidate], :method => :delete, :data => { :confirm => 'Are you sure?' }
