--- a/app/views/candidates/_candidate.html.haml
+++ b/app/views/candidates/_candidate.html.haml
@@ -12,7 +12,7 @@
         .col-md-12.text-left
           .btn-group.btn-group-xs{:role =>"group"}
             %button.btn.btn-default{:type => "button"}= link_to 'Edit', edit_organisation_election_candidate_path(current_organisation, @election, candidate)
-            %button.btn.btn-default{:type => "button"}= link_to 'Delete', [current_organisation, @election, candidate], :method => :delete, :data => { :confirm => 'Are you sure?' }
+            %button.btn.btn-default{:type => "button"}= link_to 'Remove', remove_candidate_organisation_election_candidate_path(current_organisation, @election, candidate), :method => :post, :data => { :confirm => 'Are you sure?' }
     -# - elsif current_organisation.is_admin?(current_user)
     -#   .row
     -#     .col-md-12.text-left
