--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -23,6 +23,6 @@
   .section.get-help
     .container
       %h3.section-heading Need help getting started?
-      %p.section-description= "The Ballot App is very easy to use, you can sign up using the button below, or alternatively get in touch through #{mail_to 'nick@pr.co'}.".html_safe
+      %p.section-description= "The Ballot App is very easy to use, you can sign up using the button below, or alternatively get in touch through #{mail_to 'me@nickdowse.co.nz'}.".html_safe
       %a.button.button-primary{:href => "http://ballot-app.herokuapp.com/users/sign_up"} Sign up for free
 %link{:href => "//fonts.googleapis.com/css?family=Raleway:400,300,600", :rel => "stylesheet", :type => "text/css"}/
