--- a/app/views/candidates/_form.html.haml
+++ b/app/views/candidates/_form.html.haml
@@ -13,6 +13,9 @@
     = f.label :description
     = f.text_area :description, class: "form-control"
     = f.hidden_field :created_by, value: current_user.id
+  .field.form-group
+    = f.label :avatar
+    = f.file_field :avatar
   .actions
     = f.submit 'Save', class: "btn btn-default"
-    %button.btn.btn-default{:type => "button"}= link_to 'Delete', [current_organisation, @election, candidate], :method => :delete, :data => { :confirm => 'Are you sure?' }
+    %button.btn.btn-default{:type => "button"}= link_to 'Delete', [current_organisation, @election, @candidate], :method => :delete, :data => { :confirm => 'Are you sure?' }
