--- a/app/views/candidates/edit.html.haml
+++ b/app/views/candidates/edit.html.haml
@@ -4,10 +4,12 @@
       .row
         %h3= "Edit #{@candidate.name}"
         %p.small!= "Created #{time_ago_in_words(@candidate.created_at)} ago"
-  %hr.col-md-10.col-md-offset-1
-  %hr
-  .row.election_overview
+  .row
     .col-md-8.col-md-offset-2.text-left
+  .row.election_overview
+    .col-md-6.col-md-offset-2.text-left
       .row
         = render 'form'
-
+    .col-md-2
+      .row
+        = image_tag @candidate.avatar.present? ? @candidate.avatar.url : 'candidate_placeholder.jpg'
